Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • M mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 976
    • Issues 976
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 133
    • Merge requests 133
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • mutter
  • Issues
  • #1118

Closed
Open
Created Mar 14, 2020 by grOGH@grOGH

Mutter/Wayland update broke stylus rotation

Affected version

Arch Linux with mutter 3.36 and wayland

Bug summary

The recent update to gnome 3.36 and mutter on wayland broke the mapping of screen rotation to stylus position.

Basically, the stylus works correctly if the screen is in upright position. But when rotated by 180°, it is "mirrored" to the wrong side, and wrongly mapped in the same way in 90° and 270° rotations as if the stylus input isn't aware of the screen rotation.

The rotation worked fine in wayland/gnome 3.34, and works under X.org.

Additionally, the on-screen keyboard that appears also behaves weirdly in rotations, being unusably small in the vertical positions.

OS: Arch with recent updates Device: Dell XPS 7390 2-in-1 with Dell/Wacom stylus

Steps to reproduce

1.) Activate stylus and place on screen in regular position, the cursor appears under the stylus pointer.

2.) Rotate screen and place the stylus over the screen again.

What happened

The stylus appears offset to the other edge of the screen, as if there were no rotation. The cursor is misplaced.

What did you expect to happen

The stylus rotation should apply, i.e. the stylus cursor should be under the pointer.

Relevant logs, screenshots, screencasts etc.

IF a video is required, I can make one.

Edited Mar 14, 2020 by grOGH
Assignee
Assign to
Time tracking